--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="continue_with_facebook">Continue with Facebook</string>
     <string name="continue_with_google">Continue with google</string>
     <string name="fellowship_mission_church">Fellowship Mission Church</string>
+    <string name="google_api_key_fmc">AIzaSyCxIzFEV5kl85iHqSmmYFHaPqmbg5EHpx4</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
