MCC merger re-branding FMC icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">FMC</string>
-    <string name="app_name_long">Fellowship Mission Church</string>
+    <string name="app_name">MCC</string>
+    <string name="app_name_long">Mission Church of Christ</string>
     <string name="continue_with_facebook">Continue with Facebook</string>
     <string name="continue_with_google">Continue with google</string>
-    <string name="fellowship_mission_church">Fellowship Mission Church</string>
+    <string name="mission_church">Mission Church</string>
     <string name="google_api_key_fmc">AIzaSyCxIzFEV5kl85iHqSmmYFHaPqmbg5EHpx4</string>
-    <string name="facebook_app_id">166447543925440</string>
+    <string name="facebook_app_id">106703874382202</string>
     <string name="fb_login_protocol_scheme">fb166447543925440</string>
 
 
